# anoto_verify_rust

./: .gitignore  Cargo.toml  LICENSE  README.md  VERIFICATION.md  setup_python.bat
anoto_dots/: Cargo.toml  G__9_16__10_2.txt  J__9_16__10_10.json  bitmatrix.json  bitmatrix.txt
anoto_dots/src/: lib.rs  main.rs  plotting.rs
anoto_dots/src/anoto_matrix/: gen_matrix.rs
anoto_dots/src/make_plots/: mod.rs  plotting.rs
anoto_dots/src/persist_json/: mod.rs  persist.rs
examples/: basic_usage.rs  verify_output.rs
py-microdots/: INSTALL.md  README.md
py-microdots/examples/: G.json  G.txt  verify_anoto.py
py-microdots/microdots/: draw.py
py-microdots/microdots.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
py-microdots/output/: G__13_50__46_44.json  G__13_50__46_44.txt  G__16_46__38_14.json  G__16_46__38_14.txt  G__29_61__33_23.json  G__29_61__33_23.txt  G__43_35__10_46.json  G__43_35__10_46.txt  G__43_37__56_51.json  G__43_37__56_51.txt  G__46_44__31_57.json  G__46_44__31_57.txt  G__49_64__13_48.json  G__49_64__13_48.txt  G__50_35__57_5.json  G__50_35__57_5.txt  G__50_58__64_46.json  G__50_58__64_46.txt  G__60_50__33_5.json  G__60_50__33_5.txt
py-microdots/venv_md/: pyvenv.cfg
rs_microdots/: Cargo.toml
rs_microdots/output/: G__16__16__10__10.json  G__16__16__10__10.txt  G__30__30__10__2.json  G__30__30__10__2.txt  section_0_0.json  section_0_0.txt  section_10_10.json  section_10_10.txt  section_7_2.json  section_7_2.txt  test.txt
rs_microdots/src/: lib.rs  main.rs
rs_microdots/src/anoto_matrix/: mod.rs  (+1 more)
rs_microdots/tests/: main_test.rs
src/: lib.rs
(+185 files in other folders)
